Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1087

TSHttpTxnOutgoingAddrSet forward declaration does not match implementation

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Trivial
    • Resolution: Fixed
    • 3.1.0
    • 3.3.0
    • TS API
    • None

    Description

      ts.h.in lists the following declaration:

      TSReturnCode TSHttpTxnOutgoingAddrSet(TSHttpTxn txnp, struct sockaddr const* addr);

      However, the current implementation has this function sig:

      tsapi TSReturnCode TSHttpTxnOutgoingAddrSet(TSHttpTxn txnp, struct sockaddr const* addr, socklen_t addrlen);

      Trafficserver is unable to load plugins which use this function due to the unresolved symbol.

      Attachments

        Activity

          People

            jamespeach James Peach
            wanderingbort Bart
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 1m
                1m
                Remaining:
                Remaining Estimate - 1m
                1m
                Logged:
                Time Spent - Not Specified
                Not Specified