TS-1087: TSHttpTxnOutgoingAddrSet forward declaration does not match implementation